# pixo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cursor/commands/: release.md
.cursor/plans/: rust_image_compression_library_3adbb238.plan.md
.github/workflows/: ci.yml
benches/: BENCHMARKS.md  README.md  comparison.rs  components.rs  corpus.rs  encode_benchmark.rs  jpeg_mozjpeg.rs  preset_compare.rs  preset_compare_baseline.md  size_snapshot.rs  size_snapshot_baseline.md
benchmarks/: aggregate.mjs  run-cross-bench.sh
benchmarks/js/: run.mjs
benchmarks/reports/: cross-bench.json  cross-bench.md  js-bench.json  rust-summary.json
docs/: README.md  codebase-size-comparison.md  compression-evolution.md  crate.md  dct.md  deflate.md  gap-report-baseline.md  huffman-coding.md  introduction-to-image-compression.md  introduction-to-rust.md  jpeg-encoding.md  lz77-compression.md  performance-optimization.md  performance-targets.md  png-encoding.md  quantization.md  wasm.md
examples/: codec_harness.rs  png_timing.rs
my-app/: README.md  package.json
my-app/scripts/: build-wasm.mjs
my-app/src/lib/: wasm.ts
my-app/src/lib/comprs-wasm/: comprs.d.ts  comprs.js  comprs_bg.wasm.d.ts
my-app/src/routes/: +page.svelte
scripts/: preset_compare.sh  size_snapshot.sh  wasm-size.sh
src/: bits.rs  color.rs  error.rs  lib.rs  resize.rs  wasm.rs
src/compress/: adler32.rs  crc32.rs  deflate.rs  huffman.rs  lz77.rs  mod.rs
src/decode/: bit_reader.rs  idct.rs  inflate.rs  jpeg.rs  png.rs
src/jpeg/: dct.rs  huffman.rs  mod.rs  progressive.rs  quantize.rs  trellis.rs
src/png/: bit_depth.rs  chunk.rs  decode.rs  filter.rs  mod.rs
src/simd/: aarch64.rs  fallback.rs  mod.rs  x86_64.rs
tests/: decode_conformance.rs  jpeg_conformance.rs  png_conformance.rs  quantize_fixture.rs  simd_fallback_equality.rs
tests/fixtures/: REFERENCE.md
tests/fuzz/: Cargo.toml  README.md
tests/fuzz/fuzz_targets/: deflate.rs  jpeg_encode.rs  lz77.rs  png_encode.rs
tests/support/: fixture_info.rs  jpeg_corpus.rs  kodak.rs  mod.rs  pngsuite.rs  realworld.rs  synthetic.rs
web/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/e2e/: clipboard.spec.ts  fixtures.ts  keyboard.spec.ts  multi-file.spec.ts  recompression.spec.ts  smoke.spec.ts  worker.spec.ts
web/scripts/: build-wasm.mjs  e2e-smoke.mjs
web/src/: app.css
web/src/lib/: compress-client.ts  compress.worker.ts  wasm.ts
web/src/lib/comprs-wasm/: comprs.d.ts  comprs.js  comprs_bg.wasm  comprs_bg.wasm.d.ts
web/src/lib/pixo-wasm/: pixo.d.ts  pixo.js  pixo_bg.wasm  pixo_bg.wasm.d.ts
web/src/routes/: +page.svelte
