[package]
name = "comprs"
version = "0.1.0"
edition = "2021"
description = "A minimal-dependency, high-performance image compression library"
license = "MIT"
readme = "README.md"
keywords = ["image", "compression", "png", "jpeg", "encoding"]
categories = ["compression", "encoding", "multimedia::images"]

[lib]
name = "comprs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "comprs"
path = "src/bin/comprs.rs"
required-features = ["cli"]

[features]
default = []
simd = []
parallel = ["rayon"]
cli = ["clap", "png", "jpeg-decoder"]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
rayon = { version = "1.10", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
png = { version = "0.17", optional = true }
jpeg-decoder = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = "0.24.9"
rand = "0.8"
reqwest = { version = "=0.11.14", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
proptest = "1.5"
flate2 = "1.0"
url = { version = "=2.4.1", default-features = true }


[[bench]]
name = "encode_benchmark"
harness = false

[[bench]]
name = "deflate_micro"
harness = false

[[bench]]
name = "components"
harness = false
